[package]
name = "eat-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
crossfont = "0.3"
anyhow = "1.0"
bytemuck = { version = "1.7", features = [ "derive" ] }
rand = "0.8"
tokio = { version = "1", features = [ "full" ] }
tokio-tungstenite = { version = "0.16", features = [ "native-tls" ] }
url = "2.2"
futures-util = "0.3"
ringbuf = "0.2.6"
